# activity-manager

./: .gitignore  main.py  pyproject.toml
activity_manager/: __init__.py
activity_manager/clients/: GarminClientWrapper.py  RaceIdClient.py  RaceIdClientWrapper.py  __init__.py
activity_manager/config/: ConfigLoader.py  __init__.py
activity_manager/data/: ActivityDatabase.py  ActivityStore.py  __init__.py
activity_manager/messages/: BusyMessage.py  DataMessage.py
activity_manager/models/: ActivityModel.py
activity_manager/repositories/: GarminRepository.py  RaceIdRepository.py  __init__.py
activity_manager/ui/: __init__.py
activity_manager/ui/screens/: MainScreen.py  __init__.py
activity_manager/ui/widgets/: ActivityFilter.py  ActivityTable.py  DateInput.py  __init__.py
client/: RaceID.py  RaceID_bak.py
data/: ActivityDatabase.py
lib/: ConfigLoader.py  GarminClientWrapper.py  GarminRepository.py  RaceIdClient.py  RaceIdClientWrapper.py  RaceIdRepository.py  Utils.py  auth.py  gc.py  models.py  rid.py  ui.py  ui2.py
model/: ActivityItem.py
screen/: MainScreen.py
src/data/: ActivityDatabase.py
src/message/: DataMessage.py  FilterMessage.py  __init__.py
src/models/: __init__.py
src/ui/screens/: ActivityScreen.py  __init__.py
src/ui/widgets/: ActivityFilter.py  ActivityTable.py  DateInput.py
ui/: ActivityFilter.py  ActivityTable.py  DateInput.py  Label.py  Messages.py  UiActivityFilter.py  UiActivityTable.py  UiDateInput.py  UiLabel.py  UiMainWindow.py
view/: MainWindow.py
